--- a/src/Clients/StudentSystem.Clients.Mvc/Web.config
+++ b/src/Clients/StudentSystem.Clients.Mvc/Web.config
@@ -2,8 +2,9 @@
 
 <configuration>
   <configSections>
-    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
-    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    <section name="entityFramework" 
+             type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" 
+             requirePermission="false" />
 
     <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler,log4net" />
   </configSections>
@@ -43,9 +44,9 @@
     <authentication mode="Forms">
       <forms loginUrl="~/Account/Login" timeout="60" />
     </authentication>
-    <!--<authentication mode="None" />-->
     <compilation debug="true" targetFramework="4.7" />
     <httpRuntime targetFramework="4.7" />
+    <customErrors mode="Off" />
     <pages>
         <namespaces>
           <add namespace="GridMvc" />
@@ -54,10 +55,15 @@
   </system.web>
 
   <system.webServer>
-    <!--<modules>
-      <remove name="FormsAuthentication" />
-    </modules>-->
     <validation validateIntegratedModeConfiguration="false" />
+    <httpErrors errorMode="Custom" defaultResponseMode="File" existingResponse="Replace">
+      <remove statusCode="400" />
+      <remove statusCode="404" />
+      <remove statusCode="500" />
+      <error statusCode="400" path="500.html" responseMode="File" />
+      <error statusCode="404" path="404.html" responseMode="File" />
+      <error statusCode="500" path="500.html" responseMode="File" />
+    </httpErrors>
   </system.webServer>
 
   <runtime>
