--- a/src/Data/StudentSystem.Data/StudentSystem.Data.csproj
+++ b/src/Data/StudentSystem.Data/StudentSystem.Data.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Data" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DbConfig.cs" />
     <Compile Include="Migrations\201807310109586_Initial.cs" />
     <Compile Include="Migrations\201807310109586_Initial.Designer.cs">
       <DependentUpon>201807310109586_Initial.cs</DependentUpon>
