--- a/src/Clients/StudentSystem.Clients.Mvc/Web.config
+++ b/src/Clients/StudentSystem.Clients.Mvc/Web.config
@@ -2,9 +2,7 @@
 
 <configuration>
   <configSections>
-    <section name="entityFramework" 
-             type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" 
-             requirePermission="false" />
+    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
 
     <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler,log4net" />
   </configSections>
@@ -54,6 +52,7 @@
       </pages>
   </system.web>
 
+  <!-- This should be a transformation only for Release -->
   <system.webServer>
     <validation validateIntegratedModeConfiguration="false" />
     <httpErrors errorMode="Custom" defaultResponseMode="File" existingResponse="Replace">
