--- a/src/StudentSystem.Persistence/StudentSystem.Persistence.csproj
+++ b/src/StudentSystem.Persistence/StudentSystem.Persistence.csproj
@@ -43,6 +43,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DbConfig.cs" />
+    <Compile Include="Entities\CourseEntity.cs" />
+    <Compile Include="Entities\StudentEntity.cs" />
     <Compile Include="Migrations\201807310109586_Initial.cs" />
     <Compile Include="Migrations\201807310109586_Initial.Designer.cs">
       <DependentUpon>201807310109586_Initial.cs</DependentUpon>
@@ -66,6 +68,10 @@
     <ProjectReference Include="..\StudentSystem.Domain\StudentSystem.Domain.csproj">
       <Project>{3D0E29A1-2862-41BB-9E03-DFA227B2C024}</Project>
       <Name>StudentSystem.Domain</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\StudentSystem.Infrastructure\StudentSystem.Infrastructure.csproj">
+      <Project>{0AAC1E91-86D3-4614-8BE6-6573ED9C2501}</Project>
+      <Name>StudentSystem.Infrastructure</Name>
     </ProjectReference>
     <ProjectReference Include="..\StudentSystem.Persistence.Contracts\StudentSystem.Persistence.Contracts.csproj">
       <Project>{FDD593E3-AD31-4E23-96DD-431D45DBC403}</Project>
